--- a/package.json
+++ b/package.json
@@ -5,5 +5,12 @@
   "main": "index.js",
   "repository": "https://github.com/servntire/Property-Registry",
   "author": "Servntire",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "prettier": "prettier --write 'contracts/**/Asset.sol'"
+  },
+  "devDependencies": {
+    "prettier": "^2.3.0",
+    "prettier-plugin-solidity": "^1.0.0-beta.10"
+  }
 }
