--- a/package.json
+++ b/package.json
@@ -7,10 +7,20 @@
   "author": "Servntire",
   "license": "MIT",
   "scripts": {
-    "prettier": "prettier --write 'contracts/**/Asset.sol'"
+    "prettier": "prettier --write 'contracts/**/Asset.sol'",
+    "compile": "truffle compile",
+    "deploy:ropsten": "truffle migrate --network ropsten",
+    "deploy": "truffle migrate",
+    "serve": "serve src/"
   },
   "devDependencies": {
     "prettier": "^2.3.0",
-    "prettier-plugin-solidity": "^1.0.0-beta.10"
+    "prettier-plugin-solidity": "^1.0.0-beta.10",
+    "serve": "^11.3.2",
+    "truffle": "^5.3.6"
+  },
+  "dependencies": {
+    "@truffle/hdwallet-provider": "^1.4.0",
+    "dotenv": "^9.0.2"
   }
 }
